--- a/src/css-dev/organisms/_mainMenu.scss
+++ b/src/css-dev/organisms/_mainMenu.scss
@@ -256,6 +256,10 @@
                grid-auto-flow: column;
             }
          }
+
+         .gform_body {
+            margin: 0;
+         }
       }
 
 
