--- a/src/css-dev/organisms/_pageSection.scss
+++ b/src/css-dev/organisms/_pageSection.scss
@@ -125,7 +125,7 @@
    }
 
    &__halfImage {
-      clip-path: url(#moon-bottom);
+      //clip-path: url(#moon-bottom);
       height: 60vh;
       margin: 0 calc(50% - 50vw);
       width: 100vw;
