--- a/src/css-dev/molecules/_sectionFooter.scss
+++ b/src/css-dev/molecules/_sectionFooter.scss
@@ -2,13 +2,15 @@
 
    &__nav {
       align-items: center;
-      bottom: 3rem;
+      bottom: -1rem;
       display: grid;
       gap: 15px;
       grid-auto-columns: max-content;
       grid-auto-flow: column dense;
       position: fixed;
-      right: 3rem;
+      right: 0;
+      transform-origin: 100% 0;
+      transform: rotate(90deg);
    }
 
    &__navLink {
@@ -22,11 +24,11 @@
    &__navIcon {
       @include svg-contain( 60px, 60px );
       color: currentColor;
-      transform: rotate( 90deg );
+      transform: rotate( 270deg );
       transition: transform 300ms ease-in-out;
 
       &.-reverse {
-         transform: rotate( 270deg );
+         transform: rotate( 450deg );
       }
 
       > svg {
