--- a/src/css-dev/molecules/_sectionBackground.scss
+++ b/src/css-dev/molecules/_sectionBackground.scss
@@ -34,7 +34,7 @@
       right: auto;
 
       @include breakpoint( md ) {
-         left: $navWidthDesktop;
+         left: var(--navWidthDesktop);
       }
    }
 
