--- a/src/css-dev/organisms/_navBar.scss
+++ b/src/css-dev/organisms/_navBar.scss
@@ -10,11 +10,11 @@
 
    @include breakpoint( md ) {
       grid-template-columns: 1fr;
-      grid-template-rows: $navWidthDesktop 1fr min-content min-content min-content $navWidthDesktop;
+      grid-template-rows: var(--navWidthDesktop) 1fr min-content min-content min-content var(--navWidthDesktop);
       grid-template-areas: "Menu" "Logo" "Link1" "Link2" "Locations" "Social";
       height: 100vh;
       height: var( --vh );
-      min-width: $navWidthDesktop;
+      min-width: var(--navWidthDesktop);
       width: auto;
    }
 
@@ -44,6 +44,14 @@
       grid-area: Menu;
       overflow: hidden;
       transition: color 250ms ease-in-out;
+
+      @include breakpoint( md ) {
+         padding: var(--fontSize-20);
+      }
+
+      @include breakpoint( xl ) {
+         padding: var(--fontSize-24);
+      }
 
       &:hover,
       &:focus {
@@ -154,13 +162,17 @@
          @include pseudo-link;
          color: $c-rose;
          font-family: $ff-ui;
-         font-size: 13px;
+         font-size: var(--fontSize-10);
          font-weight: 700;
          line-height: 1.1;
          text-align: center;
          text-decoration: none;
          text-transform: uppercase;
          transition: color 250ms ease-in-out;
+
+         @include breakpoint( xl ) {
+            font-size: var(--fontSize-12);
+         }
       }
 
       &Arrow {
