listing page responsive styles

--- a/src/css-dev/abstracts/_base.scss
+++ b/src/css-dev/abstracts/_base.scss
@@ -74,6 +74,7 @@
   --fontSize-36: 2.25rem; // 36
   --fontSize-45: 2.8125rem; // 45
   --fontSize-48: 3rem; // 48
+  --fontSize-55: 3.4375rem; //55
   --fontSize-60: 3.75rem; // 60
   --fontSize-64: 4rem; // 64
   --fontSize-75: 4.6875rem; // 75
