--- a/src/css-dev/organisms/_pageSection.scss
+++ b/src/css-dev/organisms/_pageSection.scss
@@ -122,6 +122,11 @@
 
    &__wrapper {
       max-width: 1220px;
+
+      .listing-template & {
+         max-width: 1400px;
+         width: 100%;
+      }
    }
 
    &__halfImage {
