--- a/src/css-dev/organisms/_navBar.scss
+++ b/src/css-dev/organisms/_navBar.scss
@@ -18,6 +18,10 @@
       width: auto;
    }
 
+   &[v-cloak] {
+      opacity: 0;
+   }
+
    > * {
       align-items: center;
       display: flex;
