--- a/src/css-dev/organisms/_footer.scss
+++ b/src/css-dev/organisms/_footer.scss
@@ -18,6 +18,10 @@ footer.footer {
       height: calc( 100vh - var(--fontSize-120) )
    }
 
+   @include breakpoint( lg ) {
+      gap: var(--fontSize-60);
+   }
+
    &__links {
       @extend %remove-list-styles;
       align-content: center;
@@ -97,7 +101,7 @@ footer.footer {
 
       @include breakpoint( xl ) {
          grid-template-areas: 'LOCATIONS SOCIAL SIGNUP BRAND';
-         place-items: center;
+         //place-items: center;
       }
    }
 
@@ -156,15 +160,15 @@ footer.footer {
       flex: 1 1 auto;
       gap: var(--fontSize-16);
       grid-template-columns: max-content;
+      height: 100%;
       justify-content: start;
 
       @include breakpoint( lg ) {
-         gap: var(--fontSize-30);
+         align-items: start;
          grid-template-columns: repeat( 2 , max-content );
       }
 
       @include breakpoint( xl ) {
-         gap: var(--fontSize-48);
          grid-template-columns: max-content;
       }
    }
@@ -249,6 +253,10 @@ footer.footer {
 
       @include breakpoint( sm ) {
          justify-self: end;
+      }
+
+      @include breakpoint( md ) {
+         margin-right: var(--fontSize-30);
       }
    }
 }
