--- a/src/css-dev/templates/_layout.scss
+++ b/src/css-dev/templates/_layout.scss
@@ -78,38 +78,41 @@
 
    &__frame {
 
-      // FALLBACK IF CLIPPATH DOESNT WORK===========================
-      // height: calc( $mobileHeight - var(--sectionPadding-y) );
-      // margin-top: var(--sectionPadding-y);
-      // overflow: hidden;
-      // width: 100vw;
+      .default-template & {
 
-      // @include breakpoint( md ) {
-      //    height: calc( var( --vh ) - var(--sectionPadding-y) );
-      //    width: $desktopWidth;
-      // }
-      --x: calc(100% - 30px);
-      --y: var(--sectionPadding-y);
+         // FALLBACK IF CLIPPATH DOESNT WORK===========================
+         // height: calc( $mobileHeight - var(--sectionPadding-y) );
+         // margin-top: var(--sectionPadding-y);
+         // overflow: hidden;
+         // width: 100vw;
 
-      clip-path: polygon( 0% var(--y), var(--x) var(--y), var(--x) 100%, 0% 100% );
-      height: $mobileHeight;
-      overflow: hidden;
-      transition: clip-path 300ms cubic-bezier(0.85, 0, 0.15, 1);
-      width: 100vw;
+         // @include breakpoint( md ) {
+            //    height: calc( var( --vh ) - var(--sectionPadding-y) );
+            //    width: $desktopWidth;
+            // }
+            --x: calc(100% - 30px);
+            --y: var(--sectionPadding-y);
 
-      @include breakpoint( md ) {
-         height: var(--vh);
-         width: $desktopWidth;
+            clip-path: polygon( 0% var(--y), var(--x) var(--y), var(--x) 100%, 0% 100% );
+            height: $mobileHeight;
+            overflow: hidden;
+            transition: clip-path 300ms cubic-bezier(0.85, 0, 0.15, 1);
+            width: 100vw;
+
+            @include breakpoint( md ) {
+               height: var(--vh);
+               width: $desktopWidth;
+            }
+
+            > .contentWrapper__content {
+               overflow: auto;
+            }
+
+            [current-section="footer"] & {
+               clip-path: polygon( 0% 0%, 100% 0%, 100% 100%, 0% 100% );
+            }
+         }
       }
-
-      > .contentWrapper__content {
-         overflow: auto;
-      }
-
-      [current-section="footer"] & {
-         clip-path: polygon( 0% 0%, 100% 0%, 100% 100%, 0% 100% );
-      }
-   }
 
    &__content {
       height: 100%;
