--- a/src/css-dev/atoms/_forms.scss
+++ b/src/css-dev/atoms/_forms.scss
@@ -120,6 +120,11 @@ select {
       outline: 2px solid var( --theme-color-accent );
       outline-offset: -3px;
    }
+
+   option {
+      background: $c-white;
+      color: $c-black;
+   }
 }
 
 textarea {
