a11y styles and functions

--- a/src/css-dev/abstracts/_mixins.scss
+++ b/src/css-dev/abstracts/_mixins.scss
@@ -68,6 +68,11 @@
    }
 }
 
+@mixin focus-style( $offset: 3px, $color: currentColor ) {
+   outline: 3px solid $color;
+   outline-offset: $offset;
+}
+
 @mixin doubleArrow-link-style() {
    @include theme-text();
    align-items: center;
