--- a/src/css-dev/organisms/_mainMenu.scss
+++ b/src/css-dev/organisms/_mainMenu.scss
@@ -111,11 +111,11 @@
       justify-content: start;
       margin: 0;
       overflow: hidden;
-      padding: 1.6rem 0;
+      padding: 1.6rem 0 1.6rem 6px;
       position: relative;
 
       &:hover,
-      &:focus {
+      &:focus-within {
          .mainMenu__primaryLink:not(.-currentPage) {
 
             + .mainMenu__primaryLinkIcon {
@@ -147,6 +147,10 @@
 
       @include breakpoint( lg ) {
          font-size: var(--fontSize-55);
+      }
+
+      &:focus {
+         @include focus-style( 3px, $c-white );
       }
 
       &.-currentPage {
@@ -209,6 +213,10 @@
       > * + * {
          margin-left: 30px;
       }
+
+      &:not(.mainMenu__socialSignup):focus-within {
+         @include focus-style( 3px, $c-white );
+      }
    }
 
    &__socialIcon {
@@ -226,6 +234,7 @@
       &:hover,
       &:focus {
          color: $c-white;
+         outline: none;
       }
    }
 
@@ -274,10 +283,18 @@
          input[type="EMAIL"] {
             border: 1px solid $c-white;
             color: $c-white;
+
+            &:focus {
+               @include focus-style( 3px, $c-white );
+            }
          }
 
          button[type="submit"] {
             @include button( $style: 'full', $gap: 40px, $color: $c-white );
+
+            &:focus {
+               @include focus-style( 3px, $c-white );
+            }
          }
       }
 
