--- a/src/css-dev/atoms/_button.scss
+++ b/src/css-dev/atoms/_button.scss
@@ -74,6 +74,11 @@
          //W
          1px 100%;
       }
+
+      &:focus {
+         @include focus-style();
+      }
+
    } @else if $style == 'half' {
       background-image:
          //NW
@@ -116,5 +121,10 @@
          //W
          1px 100%;
       }
+
+      &:focus {
+         @include focus-style();
+      }
    }
+
 }
