--- a/src/css-dev/organisms/_mainMenu.scss
+++ b/src/css-dev/organisms/_mainMenu.scss
@@ -114,8 +114,7 @@
       padding: 1.6rem 0 1.6rem 6px;
       position: relative;
 
-      &:hover,
-      &:focus-within {
+      &:hover {
          .mainMenu__primaryLink:not(.-currentPage) {
 
             + .mainMenu__primaryLinkIcon {
