--- a/src/css-dev/abstracts/_mixins.scss
+++ b/src/css-dev/abstracts/_mixins.scss
@@ -85,10 +85,22 @@
    font-weight: var(--fontWeight-bold);
    line-height: 1;
 
+   &:hover,
+   &:focus {
+      span {
+         margin: 0 0 0 1em;
+      }
+   }
+
+   &:focus {
+      @include focus-style();
+   }
+
    span {
       @include theme-text('accent');
       @include svg-contain( 15px, 15px );
       margin: 0 0 0 0.5em;
+      transition: margin 300ms $e-in-out;
    }
 }
 
