--- a/src/css-dev/molecules/_sectionFooter.scss
+++ b/src/css-dev/molecules/_sectionFooter.scss
@@ -15,6 +15,10 @@
       @include breakpoint( xs ) {
          display: grid;
       }
+
+      &:focus-within {
+         @include focus-style();
+      }
    }
 
    &__navLink {
@@ -30,6 +34,10 @@
 
       @include breakpoint( xl ) {
          font-size: var(--fontSize-16);
+      }
+
+      &:focus {
+         outline: none;
       }
    }
 
