--- a/src/css-dev/organisms/_footer.scss
+++ b/src/css-dev/organisms/_footer.scss
@@ -144,6 +144,10 @@ footer.footer {
       &:focus {
          color: $c-white;
       }
+
+      &:focus {
+         @include focus-style();
+      }
    }
 
 
@@ -179,6 +183,10 @@ footer.footer {
       margin: 0;
       position: relative;
 
+      &:focus-within {
+         @include focus-style();
+      }
+
       > * + * {
          margin-left: 30px;
       }
@@ -199,6 +207,10 @@ footer.footer {
       &:hover,
       &:focus {
          color: $c-white;
+      }
+
+      &:focus {
+         outline: none;
       }
    }
 
