hide focus for touch screen

--- a/src/css-dev/abstracts/_base.scss
+++ b/src/css-dev/abstracts/_base.scss
@@ -502,6 +502,7 @@ a:focus {
 
 // A11Y
 
-[data-whatintent='mouse'] *:focus {
+[data-whatintent='mouse'] *:focus,
+[data-whatintent='touch'] *:focus {
   outline: none;
 }
